{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 1292,
  "lineage": "217e7f67-c2d0-b090-3925-ed3fd2cfcd85",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267047935:security-group/sg-074e1aa33bef07336",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-074e1aa33bef07336",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e8a1e0a9678ea445"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "eks-argocd-gitops-cluster-20240822124344727200000004",
            "name_prefix": "eks-argocd-gitops-cluster-",
            "owner_id": "533267047935",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops-cluster"
            },
            "tags_all": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e7a16cfa3328624"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267047935:security-group/sg-0e8a1e0a9678ea445",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e8a1e0a9678ea445",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-0f98fdde8778ed592"
                ],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-074e1aa33bef07336"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-074e1aa33bef07336"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-074e1aa33bef07336"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-074e1aa33bef07336"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-074e1aa33bef07336"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-074e1aa33bef07336"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "elbv2.k8s.aws/targetGroupBinding=shared",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0201df90df5030ec0"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "eks-argocd-gitops-node-20240822124344837800000005",
            "name_prefix": "eks-argocd-gitops-node-",
            "owner_id": "533267047935",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops-node",
              "kubernetes.io/cluster/eks-argocd-gitops": "owned"
            },
            "tags_all": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops-node",
              "kubernetes.io/cluster/eks-argocd-gitops": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e7a16cfa3328624"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1915715332",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-074e1aa33bef07336",
            "security_group_rule_id": "sgr-043a31e429cb081d5",
            "self": false,
            "source_security_group_id": "sg-0e8a1e0a9678ea445",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-492123730",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0e8a1e0a9678ea445",
            "security_group_rule_id": "sgr-0074ebbe948266f9a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2554571589",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e8a1e0a9678ea445",
            "security_group_rule_id": "sgr-0e6db5d720bec07b8",
            "self": false,
            "source_security_group_id": "sg-074e1aa33bef07336",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3397055177",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e8a1e0a9678ea445",
            "security_group_rule_id": "sgr-075ec7cad037b586d",
            "self": false,
            "source_security_group_id": "sg-074e1aa33bef07336",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-54039903",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e8a1e0a9678ea445",
            "security_group_rule_id": "sgr-0ab44be96af5cdb51",
            "self": false,
            "source_security_group_id": "sg-074e1aa33bef07336",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-275032446",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e8a1e0a9678ea445",
            "security_group_rule_id": "sgr-0cf73943f632ff609",
            "self": false,
            "source_security_group_id": "sg-074e1aa33bef07336",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1959107253",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e8a1e0a9678ea445",
            "security_group_rule_id": "sgr-02981a04327510554",
            "self": false,
            "source_security_group_id": "sg-074e1aa33bef07336",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-4103948649",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e8a1e0a9678ea445",
            "security_group_rule_id": "sgr-02e2cca221b312281",
            "self": false,
            "source_security_group_id": "sg-074e1aa33bef07336",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2556020155",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e8a1e0a9678ea445",
            "security_group_rule_id": "sgr-013052ccc2a471cbe",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1633090390",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0e8a1e0a9678ea445",
            "security_group_rule_id": "sgr-036d8cd3ead55e91b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3305724089",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0e8a1e0a9678ea445",
            "security_group_rule_id": "sgr-08d5cb89da09470d5",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267047935:network-acl/acl-048cee36f410ef945",
            "default_network_acl_id": "acl-048cee36f410ef945",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-048cee36f410ef945",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "533267047935",
            "subnet_ids": [
              "subnet-0336ce831ea65a11f",
              "subnet-03b029a57d674632e",
              "subnet-04ee2718cfc37260e",
              "subnet-069a780baeb3b1df7",
              "subnet-09fb2c6c6dd2478af",
              "subnet-0d116494d6e85d465"
            ],
            "tags": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops-default"
            },
            "tags_all": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops-default"
            },
            "vpc_id": "vpc-00e7a16cfa3328624"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267047935:route-table/rtb-057c5c0a904ed0906",
            "default_route_table_id": "rtb-057c5c0a904ed0906",
            "id": "rtb-057c5c0a904ed0906",
            "owner_id": "533267047935",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops-default"
            },
            "tags_all": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-00e7a16cfa3328624"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267047935:security-group/sg-08a00cb9ef7842be8",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-08a00cb9ef7842be8",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "533267047935",
            "revoke_rules_on_delete": false,
            "tags": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops-default"
            },
            "tags_all": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops-default"
            },
            "vpc_id": "vpc-00e7a16cfa3328624"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0797b0465f9389a41",
            "arn": "arn:aws:ec2:us-west-2:533267047935:elastic-ip/eipalloc-0797b0465f9389a41",
            "association_id": "eipassoc-005eb9609a932411b",
            "domain": "vpc",
            "id": "eipalloc-0797b0465f9389a41",
            "network_border_group": "us-west-2",
            "network_interface": "eni-0b0cb6f4c3c72a8e3",
            "private_dns": "ip-10-100-48-213.us-west-2.compute.internal",
            "private_ip": "10.100.48.213",
            "public_dns": "ec2-100-20-195-83.us-west-2.compute.amazonaws.com",
            "public_ip": "100.20.195.83",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops-us-west-2a"
            },
            "tags_all": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops-us-west-2a"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267047935:internet-gateway/igw-0e3ea5ffe3d9ca8c2",
            "id": "igw-0e3ea5ffe3d9ca8c2",
            "owner_id": "533267047935",
            "tags": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops"
            },
            "tags_all": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops"
            },
            "vpc_id": "vpc-00e7a16cfa3328624"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0797b0465f9389a41",
            "association_id": "eipassoc-005eb9609a932411b",
            "connectivity_type": "public",
            "id": "nat-05b9973212bbc44c9",
            "network_interface_id": "eni-0b0cb6f4c3c72a8e3",
            "private_ip": "10.100.48.213",
            "public_ip": "100.20.195.83",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03b029a57d674632e",
            "tags": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops-us-west-2a"
            },
            "tags_all": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops-us-west-2a"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0d25bf65918263d6e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05b9973212bbc44c9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d25bf65918263d6e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e3ea5ffe3d9ca8c2",
            "id": "r-rtb-0eda05b18ae8780d81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0eda05b18ae8780d8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267047935:route-table/rtb-0d25bf65918263d6e",
            "id": "rtb-0d25bf65918263d6e",
            "owner_id": "533267047935",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05b9973212bbc44c9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops-private"
            },
            "tags_all": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e7a16cfa3328624"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267047935:route-table/rtb-0eda05b18ae8780d8",
            "id": "rtb-0eda05b18ae8780d8",
            "owner_id": "533267047935",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e3ea5ffe3d9ca8c2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops-public"
            },
            "tags_all": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-00e7a16cfa3328624"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063cf401f22b6ce3d",
            "route_table_id": "rtb-0d25bf65918263d6e",
            "subnet_id": "subnet-0d116494d6e85d465"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0de89ca9f18c9093e",
            "route_table_id": "rtb-0d25bf65918263d6e",
            "subnet_id": "subnet-069a780baeb3b1df7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a0e44daee8004be",
            "route_table_id": "rtb-0d25bf65918263d6e",
            "subnet_id": "subnet-09fb2c6c6dd2478af"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06b16d1fd720f23b9",
            "route_table_id": "rtb-0eda05b18ae8780d8",
            "subnet_id": "subnet-03b029a57d674632e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02604684310ee69f2",
            "route_table_id": "rtb-0eda05b18ae8780d8",
            "subnet_id": "subnet-0336ce831ea65a11f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019d22daa10588496",
            "route_table_id": "rtb-0eda05b18ae8780d8",
            "subnet_id": "subnet-04ee2718cfc37260e"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267047935:subnet/subnet-0d116494d6e85d465",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.100.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d116494d6e85d465",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267047935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops-private-us-west-2a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops-private-us-west-2a",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00e7a16cfa3328624"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267047935:subnet/subnet-069a780baeb3b1df7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.100.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-069a780baeb3b1df7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267047935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops-private-us-west-2b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops-private-us-west-2b",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00e7a16cfa3328624"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267047935:subnet/subnet-09fb2c6c6dd2478af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.100.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09fb2c6c6dd2478af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267047935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops-private-us-west-2c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops-private-us-west-2c",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-00e7a16cfa3328624"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267047935:subnet/subnet-03b029a57d674632e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.100.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03b029a57d674632e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267047935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops-public-us-west-2a",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops-public-us-west-2a",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00e7a16cfa3328624"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267047935:subnet/subnet-0336ce831ea65a11f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.100.49.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0336ce831ea65a11f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267047935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops-public-us-west-2b",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops-public-us-west-2b",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00e7a16cfa3328624"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267047935:subnet/subnet-04ee2718cfc37260e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.100.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ee2718cfc37260e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "533267047935",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops-public-us-west-2c",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops-public-us-west-2c",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-00e7a16cfa3328624"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:533267047935:vpc/vpc-00e7a16cfa3328624",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-048cee36f410ef945",
            "default_route_table_id": "rtb-057c5c0a904ed0906",
            "default_security_group_id": "sg-08a00cb9ef7842be8",
            "dhcp_options_id": "dopt-000a5132fc21fc252",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00e7a16cfa3328624",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-057c5c0a904ed0906",
            "owner_id": "533267047935",
            "tags": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops"
            },
            "tags_all": {
              "Blueprint": "eks-argocd-gitops",
              "GithubRepo": "github.com/aws-ia/terraform-aws-eks-blueprints",
              "Name": "eks-argocd-gitops"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}